--- a/src/components/header/style.scss
+++ b/src/components/header/style.scss
@@ -9,7 +9,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 10;
+  z-index: $header;
 
   &__container {
     display: flex;
@@ -69,7 +69,7 @@
       display: block;
       position: relative;
       right: 60px;
-      z-index: map-get($zindex, bars);
+      z-index: $bars;
       background-color: transparent;
       outline: none;
       border: none;
