--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -1,4 +1,34 @@
+@import './color.scss';
+
 .container {
   max-width: 1150px;
   margin: 0 auto;
+}
+
+.linethrough-or {
+  padding: 10px 0;
+  margin: 10px 0;
+  width: 100%;
+
+  &__text {
+    position: relative;
+    min-width: 300px;
+    width: 100%;
+    height: 1px;
+    display: block;
+    background-color: $gray;
+
+    &::before {
+      position: absolute;
+      content: 'or';
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      padding: 10px 15px;
+      font-size: 14px;
+      font-weight: 500;
+      background-color: $white;
+      text-transform: uppercase;
+    }
+  }
 }
