--- a/src/containers/Login/style.scss
+++ b/src/containers/Login/style.scss
@@ -8,7 +8,7 @@
     justify-content: center;
     align-items: center;
     padding: 20px 0;
-    border-bottom: 1px solid #d9dadc;
+    border-bottom: 1px solid $loginLogo;
 
     &-image {
       height: 100px;
@@ -35,38 +35,10 @@
     text-align: center;
   }
 
-  &__form {
-    padding: 10px 0;
-  }
-
   &__title {
     text-align: center;
     font-size: 2rem;
     font-weight: 700;
     margin: 15px 0;
-  }
-
-  &__input {
-    margin-bottom: 10px;
-    margin-top: 10px;
-
-    &-label {
-      display: block;
-      font-size: 16px;
-      font-weight: 600;
-      margin-bottom: 10px;
-    }
-
-    &-input {
-      width: 100%;
-      height: 40px;
-      padding: 6px 12px;
-      background-color: #fff;
-      background-image: none;
-      border: 1px solid #d9dadc;
-      font-size: 14px;
-      box-sizing: border-box;
-      outline: none;
-    }
   }
 }
