--- a/src/containers/Login/Components/FormLogin/style.scss
+++ b/src/containers/Login/Components/FormLogin/style.scss
@@ -25,6 +25,16 @@
     font-size: 14px;
     box-sizing: border-box;
     outline: none;
+
+    &--error {
+      border-color: $error-input-color;
+    }
+  }
+
+  &__input-error {
+    font-size: 16px;
+    color: $error-input-color;
+    margin-top: 5px;
   }
 
   &__forgot {
