--- a/src/components/Buttons/ButtonLink/style.scss
+++ b/src/components/Buttons/ButtonLink/style.scss
@@ -39,6 +39,16 @@
     }
   }
 
+  &--face-register {
+    box-shadow: inset 0 0 0 2px $faceRegister;
+    background-color: $faceRegister;
+    color: $white;
+
+    &:hover {
+      background-color: $faceRegister;
+    }
+  }
+
   &--apple {
     box-shadow: inset 0 0 0 2px $black;
     background-color: $black;
